Replace all usages of Arrays.asList with List.of where possible.