@@ -1,7 +1,7 @@
 // Copyright Vespa.ai. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.search.grouping.request;
 
-import java.util.Arrays;
+import java.util.List;
 
 /**
  * This class represents a minute-of-hour timestamp-function in a {@link GroupingExpression}. It evaluates to a long
@@ -22,7 +22,7 @@ public class MinuteOfHourFunction extends FunctionNode {
     }
 
     private MinuteOfHourFunction(String label, Integer level, GroupingExpression exp) {
-        super("time.minuteofhour", label, level, Arrays.asList(exp));
+        super("time.minuteofhour", label, level, List.of(exp));
     }
 
     @Override
