@@ -1,7 +1,7 @@
 // Copyright Vespa.ai. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.search.grouping.request;
 
-import java.util.Arrays;
+import java.util.List;
 
 /**
  * This class represents a toraw-function in a {@link GroupingExpression}. It
@@ -23,7 +23,7 @@ public class ToRawFunction extends FunctionNode {
     }
 
     private ToRawFunction(String label, Integer level, GroupingExpression exp) {
-        super("toraw", label, level, Arrays.asList(exp));
+        super("toraw", label, level, List.of(exp));
     }
 
     @Override
