@@ -1,7 +1,6 @@
 // Copyright Vespa.ai. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.flags;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -18,7 +17,7 @@ public class OrderedFlagSource implements FlagSource {
      * @param sources Flag sources in descending priority order.
      */
     public OrderedFlagSource(FlagSource... sources) {
-        this.sources = Arrays.asList(sources);
+        this.sources = List.of(sources);
     }
 
     @Override
