@@ -6,7 +6,6 @@ import com.yahoo.messagebus.routing.*;
 import com.yahoo.messagebus.network.*;
 import com.yahoo.messagebus.network.rpc.*;
 import com.yahoo.messagebus.network.rpc.test.*;
-import java.util.Arrays;
 import java.util.logging.*;
 
 public class JavaClient {
@@ -16,7 +15,7 @@ public class JavaClient {
     public static void main(String[] args) {
         try {
 	    RPCMessageBus mb = new RPCMessageBus(
-		Arrays.asList((Protocol)new SimpleProtocol()),
+		List.of((Protocol)new SimpleProtocol()),
                 new RPCNetworkParams()
                 .setIdentity(new Identity("server/java"))
 		.setSlobrokConfigId("file:slobrok.cfg"),
