@@ -5,7 +5,6 @@ import com.yahoo.config.*;
 import com.yahoo.messagebus.routing.*;
 import com.yahoo.messagebus.network.*;
 import com.yahoo.messagebus.network.rpc.*;
-import java.util.Arrays;
 import java.util.logging.*;
 
 public class JavaServer implements MessageHandler {
@@ -29,7 +28,7 @@ public class JavaServer implements MessageHandler {
     public static void main(String[] args) {
         try {
 	    RPCMessageBus mb = new RPCMessageBus(
-		Arrays.asList((Protocol)new SimpleProtocol()),
+		List.of((Protocol)new SimpleProtocol()),
                 new RPCNetworkParams()
                 .setIdentity(new Identity("server/java"))
 		.setSlobrokConfigId("file:slobrok.cfg"),
