@@ -4,7 +4,8 @@ package com.yahoo.search.predicate.index;
 import com.yahoo.search.predicate.SubqueryBitmap;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
+
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -13,9 +14,9 @@ public class IntervalPostingListTest {
     @Test
     void requireThatPostingListCanIterate() {
         PredicateIntervalStore.Builder builder = new PredicateIntervalStore.Builder();
-        int ref1 = builder.insert(Arrays.asList(0x1ffff));
-        int ref2 = builder.insert(Arrays.asList(0x1ffff));
-        int ref3 = builder.insert(Arrays.asList(0x10001, 0x2ffff));
+        int ref1 = builder.insert(List.of(0x1ffff));
+        int ref2 = builder.insert(List.of(0x1ffff));
+        int ref3 = builder.insert(List.of(0x10001, 0x2ffff));
         IntervalPostingList postingList = new IntervalPostingList(
                 builder.build(), new int[]{2, 4, 6}, new int[]{ref1, ref2, ref3}, SubqueryBitmap.ALL_SUBQUERIES);
         assertEquals(-1, postingList.getDocId());
