@@ -1,12 +1,13 @@
 // Copyright Vespa.ai. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.test;
 
-import static org.junit.Assert.assertEquals;
-
-import java.util.Arrays;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
 
 import org.hamcrest.Matcher;
 import org.junit.Test;
+
+import java.util.List;
 
 /**
  * Tests for com.yahoo.test.Matchers.
@@ -18,16 +19,9 @@ public class MatchersTestCase {
     @Test
     public final void testHasItemWithMethodObjectString() {
         @SuppressWarnings("rawtypes")
-        final Matcher<Iterable> m = Matchers.hasItemWithMethod("nalle",
-                "toLowerCase");
-        assertEquals(
-                false,
-                m.matches(Arrays.asList(new Object[] { Integer.valueOf(1),
-                        Character.valueOf('c'), "blbl" })));
-        assertEquals(
-                true,
-                m.matches(Arrays.asList(new Object[] { Character.valueOf('c'),
-                        "NALLE" })));
+        final Matcher<Iterable> m = Matchers.hasItemWithMethod("nalle", "toLowerCase");
+        assertFalse(m.matches(List.of(new Object[]{1, 'c', "blbl"})));
+        assertTrue(m.matches(List.of(new Object[]{'c', "NALLE"})));
     }
 
 }
