@@ -28,7 +28,6 @@ import java.security.cert.Certificate;
 import java.security.cert.X509Certificate;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
@@ -81,7 +80,7 @@ class SslContextBuilder {
                 keystore.setKeyEntry("cert", privateKey, new char[0], certificate.toArray(new Certificate[0]));
             }
             if (hasCaCertificateFile()) {
-                addCaCertificates(keystore, Arrays.asList(certificates(caCertificatesFile)));
+                addCaCertificates(keystore, List.of(certificates(caCertificatesFile)));
             } else if (hasCaCertificateInstance()) {
                 addCaCertificates(keystore, caCertificates);
             }
